--- a/bios/o.html
+++ b/bios/o.html
@@ -3,8 +3,14 @@
 <head>
  <title>О себе</title>
  <meta charset="utf-8">
+ <style>
+  button {
+  wight="90";
+  height="90";
+  }
+ </style>
 </head>
 <body bgcolor="blue">
- 
+<button>loll</button>
 </body>
 </html>
