--- a/bios/o.html
+++ b/bios/o.html
@@ -3,6 +3,7 @@
 <head>
  <title>О себе</title>
  <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <style>
   button {
   wight="90";
