--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 <head>
 <title>404 ErrOr</title>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <h1>ЛоЛ, ошибка 404</h1>
