--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
  <title>Visit</title>
- <meta http-equiv="refresh" content="0; url=bios/o.html">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+<body>
+<h1>lol</h1>
+</body>
 </html>
