--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
  <title>Visit</title>
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="
 </head>
-<body>
-<h1>lol</h1>
+<body bgcolor="black">
+<h1 align="center">Это мой профиль...</h1>
 </body>
 </html>
