--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
  <title>Visit</title>
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="
+ <link rel="stylesheet" href="style/text.css">
 </head>
 <body bgcolor="black">
 <h1 align="center">Это мой профиль...</h1>
